--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
         <button id="algorithm" type="submit" class="fixed3">ALGORITHM</button>
         <button id="rul" type="submit" class="fixed4">RULES</button>
     </div>
-    <div id="rules"></div>
+
       <div class="spacer" id="left">
         <div class="spacer">
             <button id="private">Private Play</button>
@@ -112,6 +112,7 @@
     <div id="stop60"></div>
     <script src="scripts/jquery.js"></script>
     <script type="text/JavaScript" src="client.js"></script>
+    <script src="scripts/socket.io.js"></script>    
     <script src="scripts/jquery-ui.js"></script>
   </body>
 </html>
