Divided client.js into six files.

--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
         <button id="algorithm" type="submit" class="fixed3">ALGORITHM</button>
         <button id="rul" type="submit" class="fixed4">RULES</button>
     </div>
-
+    <div id="rules"></div>
       <div class="spacer" id="left">
         <div class="spacer">
             <button id="private">Private Play</button>
@@ -111,8 +111,13 @@
     <div id="stop30"></div>
     <div id="stop60"></div>
     <script src="scripts/jquery.js"></script>
-    <script type="text/JavaScript" src="client.js"></script>
-    <script src="scripts/socket.io.js"></script>    
+    <script type="text/JavaScript" src="start.js"></script>
+    <script type="text/JavaScript" src="ready.js"></script>     
+    <script type="text/JavaScript" src="messages.js"></script>
+    <script type="text/JavaScript" src="dom.js"></script>
+    <script type="text/JavaScript" src="Drop1.js"></script>
+    <script type="text/JavaScript" src="refresh.js"></script>
+    <script type="text/JavaScript" src="calc.js"></script>
     <script src="scripts/jquery-ui.js"></script>
   </body>
 </html>
